tests/ui/chalkify/recursive_where_clause_on_type.stderr
error[E0277]: the trait bound `S: Bar` is not satisfied
  --> $DIR/recursive_where_clause_on_type.rs:14:14
   |
LL | impl Foo for S {
   |              ^ the trait `Bar` is not implemented for `S`
   |
note: required by a bound in `Foo`
  --> $DIR/recursive_where_clause_on_type.rs:10:12
   |
LL | trait Foo: Bar { }
   |            ^^^ required by this bound in `Foo`

error: the type `S` is not well-formed
  --> $DIR/recursive_where_clause_on_type.rs:14:14
   |
LL | impl Foo for S {
   |              ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
